# avatar

./: README.md
SmartBody-additional/data/ChrBrad/face/: ChrBrad@004_brow_lowerer_rt.skm
SmartBody-additional/data/ChrBrad/motion/: ChrBrad@Idle01_ToIdle02.skm  ChrBrad@Idle01_ToIdle03.skm  ChrBrad@Idle01_ToWalk01_Turn180Rt01.skm  ChrBrad@Idle01_ToWalk01_Turn360Rt01.skm  ChrBrad@Idle01_ToWalk01_Turn90Rt01.skm  ChrBrad@Idle01_TouchHands01.skm
SmartBody-additional/data/behaviorsets/: BehaviorSetFemaleGestures.py  BehaviorSetGestures.py  default-behavior-sets.py
SmartBody-additional/data/behaviorsets/MocapReaching/scripts/: init-example-reach-mocap.py
SmartBody-additional/data/behaviorsets/reaching/scripts/: init-reach.py
SmartBody-additional/data/examples/: AddCharacterDemo.py  AddMultipleCharacterDemo.py  BlendDemo.py  ConstraintDemo.py  CrowdDemo.py  EventDemo.py  FacialMovementDemo.py  GazeDemo.py  GesturesDemo.py  HeadDemo.py  KinectDemo.py  LocomotionDemo.py  OfflineRetargettingDemo.py  OgreCrowdDemo.py  OgreDemo.py  OnLineRetargettingDemo.py  PerlinNoiseDemo.py  PhysicsDemo.py  PhysicsForceDemo.py  PhysicsPawnDemo.py  PhysicsRagdollDemo.py  PostProcessingDemo.py  ReachDemo.py  SaccadeDemo.py  SpeechDemo.py  SteeringDemo.py
SmartBody-additional/data/examples/CEGUI/: FacialMovementCEGUI.py  GazeCEGUI.py  SpeechCEGUI.py  SteeringCEGUI.py  locomotionBlendCEGUI.py  objectmanipulation.py
SmartBody-additional/data/mesh/ChrBrad/: ChrBrad.fbx
SmartBodyOgreViewer/: ALL_BUILD.vcxproj  BUILD.txt  CMakeLists.txt  INSTALL.vcxproj  Project.sln  README  README_cmake_fixes_Windows.txt  SmartBodyOgreViewer.vcxproj  ZERO_CHECK.vcxproj  setupBinary.bat
SmartBodyOgreViewer/configs/: config.ini  ogre.cfg  plugins.cfg  resources.cfg
SmartBodyOgreViewer/media/: AH_doctor_upper_body.dds  AH_dr_face_texture.dds  Brad.mesh  Brad.skeleton  Brad_Face_2048.dds  Brad_Hand.dds  Brad_Shirt.dds  Brad_Tpose.material  ChrBrad.SKELETON  ChrMaarten.skeleton  ChrRachel.material  ChrRachel.skeleton  Couch.dds  Diagnostic_Level(ft).mesh  Diagnostic_Level(meter_in_cm).material  Diagnostic_Level(meter_in_cm).mesh  Doctor.material  Doctor.skeleton  Face.dds  Jacket.dds  PantsShirtShoes.dds  Utah.mesh  WindowDirty.dds  bradportrait.dds  doctor_lower_body.dds  resources.cfg  vh_basic_level.material  vh_basic_level.mesh
SmartBodyOgreViewer/src/: BoneBusHandler.cpp  BoneBusHandler.h  DotSceneLoader.cpp  DotSceneLoader.h  ExampleApplication.h  ExampleFrameListener.h  MovableText.cpp  MovableText.h  ObjectTextDisplay.h  OgreFrameListener.cpp  OgreFrameListener.h  OgreRenderer.cpp  OgreRenderer.h  SBListener.cpp  SBListener.h  ini.c  main.cpp  plugins-win32.cfg
SmartBodyOgreViewer_VS14/: BUILD.txt  CMakeLists.txt  README  setupBinary.bat
SmartBodyOgreViewer_VS14/configs/: config.ini  plugins.cfg  resources.cfg
SmartBodyOgreViewer_VS14/media/: AH_teeth_tongue_eyes.dds  Brad_Pants.dds  ChrBrad.MATERIAL  ChrBrad.SCENE  ChrMaarten.material  ChrMaarten.mesh  ChrRachel.mesh  ChrUtah_Body_Diffuse.dds  ChrUtah_Head_Diffuse.dds  Doctor.mesh  DoorKnob.dds  Elder.material  Elder.mesh  Elder.skeleton  Eyelashes001_Diffuse.dds  Hardwood.dds  Hat.dds  PrpSpectacles_001_Diffuse.dds  Trim.dds  Utah.material  Utah.skeleton  Walls.dds  Wood.dds  background.dds  background2.dds  doctor_hand.dds  thumbsup.material  thumbsup.skeleton
SmartBodyOgreViewer_VS14/media/packs/: Wallphoto.mesh
SmartBodyOgreViewer_VS14/media/packs/OgreCore/: OgreDebugPanel.overlay
SmartBodyOgreViewer_VS14/src/: BoneBusHandler.cpp  BoneBusHandler.h  DotSceneLoader.cpp  ExampleApplication.h  ExampleFrameListener.h  MovableText.cpp  MovableText.h  ObjectTextDisplay.h  OgreFrameListener.cpp  OgreRenderer.cpp  OgreRenderer.h.bak  SBListener.h
